fix: send location & destination
