# model/entity/destination.go
@@ -8,6 +8,9 @@ type Destination struct {
 	DestinationLatLng Point              `json:"destination" bson:"destination,omitempty"`
 	InitialLocation   Point              `json:"initialLocation" bson:"initialLocation,omitempty"`
 	EncodedRoute      string             `json:"encodedRoute" bson:"encodedRoute,omitempty"`
+	LocationName      string             `json:"locationName" bson:"locationName,omitempty"`
+	DestinationName   string             `json:"destinationName" bson:"destinationName,omitempty"`
+	EstimateTime      string             `json:"estimateTime" bson:"estimateTime,omitempty"`
 }
 
 type Location struct {
