# model/request/destination_and_polyline_request.go
@@ -7,4 +7,7 @@ type DestinationAndPolylineRequest struct {
 	Destination     *entity.Point `json:"destination" bson:"destination,omitempty" validate:"required"`
 	InitialLocation *entity.Point `json:"initialLocation" bson:"initialLocation,omitempty" validate:"required"`
 	EncodedRoute    string        `json:"encodedRoute" bson:"encodedRoute,omitempty" validate:"required"`
+	LocationName    string        `json:"locationName" bson:"locationName" validate:"required"`
+	DestinationName string        `json:"destinationName" bson:"destinationName" validate:"required"`
+	EstimateTime    string        `json:"estimateTime" bson:"estimateTime" validate:"required"`
 }
